--- a/index.html
+++ b/index.html
@@ -5,13 +5,115 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Sign-up</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+
+            <div class="col-4 col-xl-auto px-0 d-none d-lg-block">
+                <img src="imgs/leafs.jpg" class="img-fluid vh-100" alt="">
+                <div class="row fixed-top w-100">
+                    <div class="col-6">
+                        <img src="imgs/odin-lined.png" class="odin-logo" alt="">
+                    </div>
+                    <div class="col-6"><span>ODIN</span></div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row content pl-4">
+                    <div class="col-6">
+                        <p class="font-weight-bold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt minus quos magnam dignissimos dolor qui doloribus molestiae rem ut? Dolore consequatur ipsam vitae, accusamus dicta ad dignissimos suscipit tempora omnis.</p>
+                    </div>
+                </div>
+            
+                <div class="row mb-4 mt-5 bg-white shadow pl-4">
+                    <div class="col">
+                        <form action="#nowhere" class="needs-validation" id="sign-up" novalidate
+                        oninput='up2.setCustomValidity(up2.value != up.value ? "Passwords do not match." : "")'>
+                            <h1 class="display-4 mb-4 pt-3">Let's do this!</h2>
+                            <div class="form-row justify-content-start">
+                                <div class="form-group col-8 col-lg-4 mr-5">
+                                    <label for="name">FIRST NAME</label>
+                                    <input type="text" class="form-control" id="name" required>
+                                </div>
+                                <div class="form-group col-8 col-lg-4">
+                                    <label for="lastname">LAST NAME</label>
+                                    <input type="text" class="form-control" id="lastname" required>
+                                </div>
+                            </div>
+                            <div class="form-row justify-content-start">
+                                <div class="form-group col-8 col-lg-4 mr-5">
+                                    <label for="email">EMAIL</label>
+                                    <input type="email" class="form-control" id="email" required>
+                                    <div class="invalid-feedback">
+                                        Please provide a valid e-mail.
+                                      </div>
+                                </div>
+                                <div class="form-group col-8 col-lg-4">
+                                    <label for="phone">PHONE NUMBER</label>
+                                    <input type="tel" class="form-control" id="phone" required>
+                                </div>
+                            </div>
+                            <div class="form-row justify-content-start">
+                                <div class="form-group col-8 col-lg-4 mr-5">
+                                    <label for="password">PASSWORD</label>
+                                    <input type="password" class="form-control" id="password" name="up" required>
+                                    <div class="invalid-feedback">
+                                        Passwords do not match!
+                                      </div>
+                                </div>
+                                <div class="form-group col-8 col-lg-4">
+                                    <label for="password-confirm">CONFIRM PASSWORD</label>
+                                    <input type="password" class="form-control" id="password-confirm" name="up2" required>
+                                    <div class="invalid-feedback">
+                                        Passwords do not match!
+                                      </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="row pl-4">
+                    <div class="col">
+                        <button type="submit" form="sign-up" class="btn btn-primary btn-lg font-weight-bold px-5 mb-4 py-2 border-0">Create Account</button>
+                    </div>
+                    <div class="w-100"></div>
+                    <div class="col">
+                        Already have an account? <a href="#">Log in</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function() {
+          'use strict';
+          window.addEventListener('load', function() {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function(form) {
+              form.addEventListener('submit', function(event) {
+                if (form.checkValidity() === false) {
+                  event.preventDefault();
+                  event.stopPropagation();
+                }
+                form.classList.add('was-validated');
+              }, false);
+            });
+          }, false);
+        })();
+        </script>
 </body>
 </html>
