Added brand section and made the page responsive

--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-4 col-xl-auto px-0 d-none d-lg-block">
-                <img src="imgs/leafs.jpg" class="img-fluid vh-100" alt="">
-                <div class="row fixed-top w-100">
-                    <div class="col-6">
-                        <img src="imgs/odin-lined.png" class="odin-logo" alt="">
-                    </div>
-                    <div class="col-6"><span>ODIN</span></div>
+            <div class="col-4 px-0 d-none d-lg-block position-relative">
+                <img src="imgs/leafs.jpg" class="img-fluid vh-100 bg-img" alt="">
+                <div class="brand position-absolute d-flex justify-content-center align-items-center">
+                    <img src="imgs/odin-lined.png" class="odin-logo" alt="">
+                    <span>ODIN</span>
                 </div>
             </div>
 
