Improved mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-
             <div class="col-4 px-0 d-none d-lg-block position-relative">
-                <img src="imgs/leafs.jpg" class="img-fluid vh-100 bg-img" alt="">
+                <img src="imgs/leafs.jpg" class="img-fluid bg-img leaf" alt="">
                 <div class="brand position-absolute d-flex justify-content-center align-items-center">
                     <img src="imgs/odin-lined.png" class="odin-logo" alt="">
                     <span>ODIN</span>
@@ -24,49 +23,49 @@
             </div>
 
             <div class="col">
-                <div class="row content pl-4">
-                    <div class="col-6">
+                <div class="row pl-4 mt-2 mt-lg-5">
+                    <div class="col-12 col-lg-6">
                         <p class="font-weight-bold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt minus quos magnam dignissimos dolor qui doloribus molestiae rem ut? Dolore consequatur ipsam vitae, accusamus dicta ad dignissimos suscipit tempora omnis.</p>
                     </div>
                 </div>
             
-                <div class="row mb-4 mt-5 bg-white shadow pl-4">
+                <div class="row mb-4 mt-lg-5 bg-white shadow pl-4">
                     <div class="col">
                         <form action="#nowhere" class="needs-validation" id="sign-up" novalidate
                         oninput='up2.setCustomValidity(up2.value != up.value ? "Passwords do not match." : "")'>
                             <h1 class="display-4 mb-4 pt-3">Let's do this!</h2>
                             <div class="form-row justify-content-start">
-                                <div class="form-group col-8 col-lg-4 mr-5">
+                                <div class="form-group col-10 col-lg-4 mr-5">
                                     <label for="name">FIRST NAME</label>
                                     <input type="text" class="form-control" id="name" required>
                                 </div>
-                                <div class="form-group col-8 col-lg-4">
+                                <div class="form-group col-10 col-lg-4">
                                     <label for="lastname">LAST NAME</label>
                                     <input type="text" class="form-control" id="lastname" required>
                                 </div>
                             </div>
                             <div class="form-row justify-content-start">
-                                <div class="form-group col-8 col-lg-4 mr-5">
+                                <div class="form-group col-10 col-lg-4 mr-5">
                                     <label for="email">EMAIL</label>
                                     <input type="email" class="form-control" id="email" required>
                                     <div class="invalid-feedback">
                                         Please provide a valid e-mail.
                                       </div>
                                 </div>
-                                <div class="form-group col-8 col-lg-4">
+                                <div class="form-group col-10 col-lg-4">
                                     <label for="phone">PHONE NUMBER</label>
                                     <input type="tel" class="form-control" id="phone" required>
                                 </div>
                             </div>
                             <div class="form-row justify-content-start">
-                                <div class="form-group col-8 col-lg-4 mr-5">
+                                <div class="form-group col-10 col-lg-4 mr-5">
                                     <label for="password">PASSWORD</label>
                                     <input type="password" class="form-control" id="password" name="up" required>
                                     <div class="invalid-feedback">
                                         Passwords do not match!
                                       </div>
                                 </div>
-                                <div class="form-group col-8 col-lg-4">
+                                <div class="form-group col-10 col-lg-4">
                                     <label for="password-confirm">CONFIRM PASSWORD</label>
                                     <input type="password" class="form-control" id="password-confirm" name="up2" required>
                                     <div class="invalid-feedback">
